@@ -134,7 +134,8 @@ void R_CheckUserInterrupt(void)
 }
 
 static SEXP getInterruptCondition();
-void onintr()
+
+static void onintrEx(Rboolean resumeOK)
 {
     if (R_interrupts_suspended) {
 	R_interrupts_pending = 1;
@@ -142,19 +143,26 @@ void onintr()
     }
     else R_interrupts_pending = 0;
 
-    SEXP hooksym = install(".signalInterrupt");
-    if (SYMVALUE(hooksym) != R_UnboundValue) {
-	int resume = FALSE;
-	SEXP cond, hcall;
-	PROTECT(cond = getInterruptCondition());
-	PROTECT(hcall = LCONS(hooksym, LCONS(cond, R_NilValue)));
-	resume = asLogical(eval(hcall, R_GlobalEnv));
-	UNPROTECT(2);
-	if (resume) return;
+    if (resumeOK) {
+	SEXP rho = R_GlobalContext->cloenv;
+	int dbflag = RDEBUG(rho);
+	RCNTXT restartcontext;
+	begincontext(&restartcontext, CTXT_RESTART, R_NilValue, R_GlobalEnv,
+		     R_BaseEnv, R_NilValue, R_NilValue);
+	if (SETJMP(restartcontext.cjmpbuf)) {
+	    SET_RDEBUG(rho, dbflag); /* in case browser() has messed with it */
+	    R_ReturnedValue = R_NilValue;
+	    R_Visible = FALSE;
+	    endcontext(&restartcontext);
+	    return;
+	}
+	R_InsertRestartHandlers(&restartcontext, "resume");
+	signalInterrupt();
+	endcontext(&restartcontext);
     }
     else signalInterrupt();
 
-    /* Interrupts do not inherif from error, so we should not run the
+    /* Interrupts do not inherit from error, so we should not run the
        user erro handler. But we have been, so as a transition,
        continue to use options('error') if options('interrupt') is not
        set */
@@ -166,6 +174,9 @@ void onintr()
        what we really want, but this preserves current behavior */
     jump_to_top_ex(TRUE, tryUserError, TRUE, TRUE, FALSE);
 }
+
+void onintr()  { onintrEx(TRUE); }
+void onintrNoResume() { onintrEx(FALSE); }
 
 /* SIGUSR1: save and quit
    SIGUSR2: save and quit, don't run .Last or on.exit().
@@ -1714,7 +1725,7 @@ static void signalInterrupt(void)
 }
 
 void attribute_hidden
-R_InsertRestartHandlers(RCNTXT *cptr, Rboolean browser)
+R_InsertRestartHandlers(RCNTXT *cptr, const char *cname)
 {
     SEXP klass, rho, entry, name;
 
@@ -1732,7 +1743,7 @@ R_InsertRestartHandlers(RCNTXT *cptr, Rboolean browser)
     entry = mkHandlerEntry(klass, rho, R_RestartToken, rho, R_NilValue, TRUE);
     R_HandlerStack = CONS(entry, R_HandlerStack);
     UNPROTECT(1);
-    PROTECT(name = mkString(browser ? "browser" : "tryRestart"));
+    PROTECT(name = mkString(cname));
     PROTECT(entry = allocVector(VECSXP, 2));
     SET_VECTOR_ELT(entry, 0, name);
     SET_VECTOR_ELT(entry, 1, R_MakeExternalPtr(cptr, R_NilValue, R_NilValue));
@@ -1856,7 +1867,7 @@ SEXP attribute_hidden do_addTryHandlers(SEXP call, SEXP op, SEXP args, SEXP rho)
 	! (R_GlobalContext->callflag & CTXT_FUNCTION))
 	error(_("not in a try context"));
     SET_RESTART_BIT_ON(R_GlobalContext->callflag);
-    R_InsertRestartHandlers(R_GlobalContext, FALSE);
+    R_InsertRestartHandlers(R_GlobalContext, "tryRestart");
     return R_NilValue;
 }
 
